<resources>
    <string name="app_name">My App Udemy</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="previous">Back</string>

    <string name="id_text_login">Test Application</string>
    <string name="hello_second_fragment">Hello second fragment.</string>
    <string name="txt_home_page">Login successfully!</string>
</resources>