...
        android:layout_marginLeft="120dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="20dp"
        android:text="@string/id_text_login"
        app:layout_constraintBottom_toTopOf="@+id/field_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
...
        android:layout_marginBottom="130dp"
        android:text="@string/btn_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_password" />

    <EditText
        android:id="@+id/field_email"
        android:layout_width="268dp"
        android:layout_height="57dp"
        android:layout_marginStart="80dp"
...
